fix some layout bug, add select method

--- a/style/jsmind.css
+++ b/style/jsmind.css
@@ -1,18 +1,21 @@
+/* important section */
 .jsmind-inner{position:relative;overflow:auto;width:100%;height:100%;}/*box-shadow:0 0 2px #000;*/
 
 /* z-index:1 */
 canvas{position:absolute;z-index:1;}
 
 /* z-index:2 */
-jmnodes{position:absolute;z-index:2;background-color:rgba(0,0,0,0);}/*must bgcolor*/
+jmnodes{position:absolute;z-index:2;background-color:rgba(0,0,0,0);}/*background color is necessary*/
+jmnode{position:absolute;cursor:default;max-width:400px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+jmexpander{position:absolute;width:11px;height:11px;display:block;overflow:hidden;line-height:12px;font-size:12px;text-align:center;border-radius:6px;border-width:1px;border-style:solid;cursor:pointer;}
 
-jmnode{padding:10px;position:absolute;background-color:#3f3;border-radius:5px;box-shadow:1px 1px 1px #666;cursor:default;max-width:400px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font:16px/1.125 Verdana,Arial,Helvetica,sans-serif;}
+/* custom style */
+jmnode{padding:10px;background-color:#3f3;border-radius:5px;box-shadow:1px 1px 1px #666;font:16px/1.125 Verdana,Arial,Helvetica,sans-serif;}
 jmnode:hover{box-shadow:2px 2px 8px #000;}
-jmnode.selected{background-color:#11f;color:#fff;}
+jmnode.selected{background-color:#11f;color:#fff;box-shadow:2px 2px 8px #000;}
 jmnode.root{padding:10px;font-size:24px;}
 jmnode.shine{background-color:#f03;}
-
-jmexpander{position:absolute;z-index:2;width:11px;height:11px;display:block;overflow:hidden;line-height:12px;font-size:12px;/*text-indent:2px;*/text-align:center;border-radius:6px;border:solid 1px gray;cursor:pointer;}
+jmexpander{border-color:gray;}
 jmexpander:hover{border-color:#000;}
 
 /* z-index:10 */
